Fix text alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -53,8 +53,8 @@ header nav{
 .cajas{
     display: flex;
     align-items: center;
-    text-align: center;
-    justify-content: center;
+    text-align: left;
+    justify-content: flex-start;
     padding: 20px;
     padding-top: 5px;
     padding-bottom: 10px;
